<resources>
    <string name="empty_login">Введите логин!</string>
    <string name="empty_password">Введите пароль!</string>
    <string name="app_name">Кармашек</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_purchase">Purchase</string>
    <string name="fragment_income">Income</string>
    <string name="fragment_registration">Registration</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_category">Category</string>
    <string name="fragment_details_goal">Details goal</string>
    <string name="fragment_details_operation">Details operation</string>
    <string name="fragment_goal">Goal</string>
    <string name="title_purchases">Расходы</string>
    <string name="title_incomes">Доходы</string>
    <string name="title_goals">Цели</string>
    <string name="title_settings">Найтройки</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="entrance">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="username">Логин</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="to_come_in">Войти</string>
    <string name="empty_repeat_password">Повторите введённый пароль!</string>
    <string name="password_mismatch">Ваши пароли не совподают!</string>
    <string name="empty_email">Введите e-mail!</string>
    <string name="empty_last_name">Введите фалимию!</string>
    <string name="empty_fist_name">Введите имя!</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="invalid_login_or_password">Неверный логин или пароль!</string>
    <string name="failed_to_connect_to_server">Не удалось подключиться к серверу, попробуйте повторить через 5 секунд</string>
    <string name="menu_title_purchases">Расходы</string>
    <string name="menu_title_incomes">Доходы</string>
    <string name="menu_title_goals">Цели</string>
    <string name="menu_title_statistics">Статистика</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_statistics">Статистика</string>
    <string name="service_unavailable">Сервер недоступен. Возможно ведутся работы</string>
</resources>