<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewHeader"
            android:text="@string/app_name"

            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/wallet"
            android:layout_margin="@dimen/standard_dimen"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/login_et_username"
            style="@style/EditTextPrimary"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_login"
            />
        <EditText
            android:id="@+id/login_et_password"
            style="@style/EditTextPrimary"
            android:layout_marginBottom="@dimen/standard_dimen"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            />
        <Button
            android:id="@+id/login_btn_sing_in"
            style="@style/ButtonPrimary"
            android:text="@string/entrance"/>
        <Button
            android:id="@+id/login_btn_sing_up"
            style="@style/ButtonPrimary"
            android:layout_marginBottom="@dimen/standard_dimen"
            android:text="@string/registration"/>
    </LinearLayout>

</FrameLayout>